Fix wrap issues. Add note frontend.

--- a/ToDoAndNotes3/wwwroot/styles/pages/main.css
+++ b/ToDoAndNotes3/wwwroot/styles/pages/main.css
@@ -43,7 +43,7 @@ header {
 
 .container {
     display: flex;
-    /*padding-top: var(--top-bar-height);*/
+    min-width: 0;
     height: calc(100% - var(--top-bar-height));
 }
 
@@ -61,6 +61,7 @@ header {
 
 main {
     flex: 1;
+    min-width: 0;
     background-color: var(--light-orange-color);
     transition: visibility 0.1s, opacity 0.1s linear;
     padding: 0 10px 10px;
@@ -152,7 +153,6 @@ main {
     background-color: var(--light-yellow-color);
     border-radius: 5px;
     list-style-type: none;
-    margin-bottom: 4px;
     cursor: pointer;
 }
 .nav-link:hover {
@@ -167,7 +167,7 @@ main {
     padding: 5px 12px;
     z-index: 1;
 }
-.nav-link a .nowrap-ellipsis {
+.nowrap-ellipsis {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -176,6 +176,11 @@ main {
 
 .days {
     height: var(--days-height);
+}
+.days-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 4px;
 }
 .projects {
     height: calc(100% - var(--days-height));
@@ -197,6 +202,7 @@ main {
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+    row-gap: 4px;
 }
 .projects-data .nav-link {
     border-radius: 10px;
@@ -225,7 +231,9 @@ main {
     justify-content: end;
 }
 .main-container {
+    flex: 1;
     display: flex;
+    min-width: 0;
     column-gap: 20px;
     height: calc(100% - var(--main-bar-height));
 }
@@ -235,30 +243,13 @@ main {
     background-color: var(--light-green-color);
     padding: 8px;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 6px;
 }
 .tasks-with-notes {
-    display: flex;
-    flex-direction: column;
-    row-gap: 8px;
     display: none;
 }
-.tasks {
-    display: flex;
-    flex-direction: column;
-    row-gap: 8px;
-}
-.notes {
-    display: flex;
-    flex-direction: column;
-    row-gap: 8px;
-}
-.task, .note {
-    flex: 1;
-    background-color: var(--light-yellow-color);
-    border-radius: 10px;
-    min-height: 52px;
-}
-
 @media (max-width: 700px) {
     .tasks, .notes {
         display: none;
@@ -282,20 +273,24 @@ main {
     display: none;
     position: absolute;
     background-color: var(--light-orange-color);
-    min-width: 160px;
+    min-width: 120px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     right: 0;
     z-index: 2;
+    border-radius: 5px;
 }
-.dropdown-content a {
+.dropdown-content a, .dropdown-content form {
     color: black;
-    padding: 14px;
     text-decoration: none;
     display: block;
+    margin: 5px;
+}
+.dropdown-content a, .dropdown-content button {
+    padding: 5px;
+    padding-left: 7px;
 }
 .dropdown-content button {
-    padding: 14px;
     background-color: inherit;
     border: 0;
     width: 100%;
@@ -303,6 +298,7 @@ main {
 }
 .dropdown-content a:hover, .dropdown-content button:hover {
     border: 1px solid;
+    border-radius: 5px;
 }
 .show {
     display: flex;
@@ -311,7 +307,12 @@ main {
 }
 
 /* Task */
-.task{
+.task, .note {
+    flex: 1;
+    background-color: var(--light-yellow-color);
+    border-radius: 10px;
+}
+.task {
     max-height: 52px;
 }
 .task.nav-link a {
@@ -324,12 +325,18 @@ main {
     align-self: baseline;
     margin-top: 2px;
 }
+.task-content, .note-content {
+    min-width: 0;
+    flex: 1;
+}
 .tools-row{
     display: flex;
     margin-top: 2px;
     column-gap: 3px;
 }
-
 .note {
     max-height: 64px;
+}
+.note-description {
+    font-size: 12px;
 }
